Updated Table Build

--- a/WDDAssignments/lesson8/stormcenter.html
+++ b/WDDAssignments/lesson8/stormcenter.html
@@ -73,11 +73,11 @@ li a:hover {
       <button onclick="toggleMenu()">&#9776;</button>
     <ul class="hide" id="primeNav">
         <li class="active"><a href="index.html">Home</a></li>
-    	<li><a href="franklin.html">Franklin</a></li>
-    	<li><a href="greenville.html">Greenville</a></li>
-    	<li><a href="springfield.html">Springfield</a></li>
+    	<li><a href="#">Preston</a></li>
+    	<li><a href="#">Soda Springs</a></li>
+    	<li><a href="#">Fish Haven</a></li>
     	<li><a href="stormcenter.html">Storm Center</a></li>
-    	<li><a href="gallery.html">Gallery</a></li>
+    	<li><a href="#">Gallery</a></li>
             </ul>		
   </nav>
 <main>
@@ -129,9 +129,9 @@ li a:hover {
        
     <label class="top">Storm Region</label>
   <select name="cars">
-    <option value="Franklin">Franklin</option>
-    <option value="Greenville">Greenville</option>
-    <option value="Springfield">Springfield</option>
+    <option value="Preston">Preston</option>
+    <option value="Soda Springs">Soda Springs</option>
+    <option value="Fish Haven">Fish Haven</option>
   </select><br>
                 <label class="top">Are You in Danger?</label>
                 <label class="sbs"><input type="radio" name="audience" value="yes">Yes</label>
