--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
     <li><p>Lesson 4: <a href="https://tienut73.github.io/WDDAssignments/lesson4/preston-4.html">Assignment Preston 4 Link</a></p></li>
     <li><p>Lesson 5: <a href="https://tienut73.github.io/WDDAssignments/lesson5final/preston-5.html">Assignment Preston 5 Link</a></p></li>
     <li><p>Lesson 6: <a href="https://tienut73.github.io/WDDAssignments/lesson6/preston-6.html">Assignment Preston 6 Link</a></p></li>
-    <li><p>Lesson 7: <a href="https://tienut73.github.io/WDDAssignments/lesson7/lazyload.html">Lazy Load Assignment</a> | <a href="https://tienut73.github.io/WDDAssignments/lesson7/preston-7.html">Assignment Gallery</a></p></li>
+    <li><p>Lesson 7: <a href="https://tienut73.github.io/WDDAssignments/lesson7/lazyload.html">Lazy Load Assignment</a> | <a href="https://tienut73.github.io/WDDAssignments/lesson7/gallery-7.html">Assignment Gallery</a></p></li>
     <li><p>Lesson 8: <a href="https://tienut73.github.io/WDDAssignments/lesson8/tablebuild.html">Table Build</a> | <a href="https://tienut73.github.io/WDDAssignments/lesson8/stormcenter.html">Storm Center</a></p></li>
+    <li><p>Lesson 9: <a href="https://tienut73.github.io/WDDAssignments/lesson8/tablebuild.html">TBA</a> | <a href="https://tienut73.github.io/WDDAssignments/lesson8/stormcenter.html">TBA</a></p></li>
 
     </ul>
 </nav>
 </main>
 <footer>
     <p class="first">
-    &copy; 2020 | Logan Pierce | Texas | <a href="http://www.byui.edu/online">BYU-Idaho Online Learning.</a>
+    &copy; 2020 | Logan Pierce | Oklahoma | <a href="http://www.byui.edu/online">BYU-Idaho Online Learning.</a>
     </p>
     <p class="second">
     Last Updated: <span id="modifiedTime"></span>
