--- a/WDDAssignments/lesson9/prophets.html
+++ b/WDDAssignments/lesson9/prophets.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prophets</title>
+    <title>Prophets Activity</title>
     <meta name="description"
         content="~155 characters summarizing with keywords the page content - on page SEO">
+        <link href="https://fonts.googleapis.com/css2?family=Paprika+Serif&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../lesson9/css/prophets.css">
 </head>
 
