--- a/WDDAssignments/lesson9/prophets.html
+++ b/WDDAssignments/lesson9/prophets.html
@@ -11,12 +11,13 @@
         <link rel="stylesheet" href="../lesson9/css/prophets.css">
 </head>
 
-<body>
+<body class="vsc-initialized">
     <header>
         <h1>Latter-day Prophets</h1>
     </header>
     <main>
         <div class="cards"></div>
+        
     </main>
     <footer>
         Logan Pierce | BYU-Idaho | WDD 230
