--- a/WDDAssignments/lesson10/preston-10.html
+++ b/WDDAssignments/lesson10/preston-10.html
@@ -6,18 +6,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <meta name="description" content="Weather Wizard gives weekly forecasts.">
         <link rel="shortcut icon" href="images/favicon.ico">
-        <link rel="stylesheet" type="text/css" href="../lesson9/css/normalize.css">
-        <link rel="stylesheet" type="text/css" href="../lesson9/css/small.css">
-        <link rel="stylesheet" type="text/css" href="../lesson9/css/medium.css">
-        <link rel="stylesheet" type="text/css" href="../lesson9/css/large.css">
+        <link rel="stylesheet" type="text/css" href="../lesson10/css/normalize.css">
+        <link rel="stylesheet" type="text/css" href="../lesson10/css/small.css">
+        <link rel="stylesheet" type="text/css" href="../lesson10/css/medium.css">
+        <link rel="stylesheet" type="text/css" href="../lesson10/css/large.css">
     </head>
     <body class="vsc initalized">
       <div id="plannedEvent">Preston Pancakes in the Park!<br>
         City Park, 9:00 A.M. Saturday
       </div>
-        <header class="clearfix"><a href="lesson9/preston-9.html">
+        <header class="clearfix"><a href="lesson10/preston-10.html">
             <figure class="logo">
-            <img src="../lesson9/images/stormCloud.png" alt="logo">
+            <img src="../lesson10/images/stormCloud.png" alt="logo">
             </figure></a>
             <section class="heading">
         <h1>Weather Wizard</h1>
@@ -30,22 +30,22 @@
             <a class="primeNav" href="#" onclick="toggleMenu()">&#9776;</a>
              </li>
                 <li>
-                  <a href="../lesson9/index.html">Home</a>
+                  <a href="../lesson10/index.html">Home</a>
                 </li>
                 <li>
-                  <a href="../lesson9/preston-9.html" class="active">Preston</a>
+                  <a href="../lesson10/preston-10.html" class="active">Preston</a>
                 </li>
                 <li>
-                    <a href="../lesson9/preston-9.html">Soda Springs</a>
+                    <a href="../lesson10/preston-10.html">Soda Springs</a>
                   </li>
                   <li>
-                    <a href="../lesson9/preston-9.html">Fish Haven</a>
+                    <a href="../lesson10/preston-10.html">Fish Haven</a>
                   </li>
                   <li>
-                    <a href="../lesson9/preston-9.html">Storm Center</a>
+                    <a href="../lesson10/preston-10.html">Storm Center</a>
                   </li>
                   <li>
-                    <a href="../lesson9/preston-9.html">Gallery</a>
+                    <a href="../lesson10/preston-10.html">Gallery</a>
                   </li>
             </ul>
         </nav>
@@ -53,14 +53,14 @@
             <h2>Preston Idaho</h2>
             <section class="imgcontainer">
               <picture>
-                <source srcset="../lesson9/images/franklinSML.jpg" media="(max-width: 550px)">
-                <source srcset="../lesson9/images/franklinMED.jpg" media="(max-width: 950px)">
-                <img src="../lesson9/images/franklinLRG.jpeg" alt="franklin Image">
+                <source srcset="../lesson10/images/franklinSML.jpg" media="(max-width: 550px)">
+                <source srcset="../lesson10/images/franklinMED.jpg" media="(max-width: 950px)">
+                <img src="../lesson10/images/franklinLRG.jpeg" alt="franklin Image">
               </picture>
             <div class="weatherSum">
             <div id="boxtitle">Weather Summary</div>
             <div class="contentbox">Currently: <span id="weather">Sunny</span></p>
-            <div class="contentbox">High: <span id="tempf">65&deg;F</span></p>
+            <div class="contentbox">High: <span id="current-temp">&deg;F</span></p>
             <div class="contentbox">Wind Chill: <span id="windchill">&deg;F</span></p>
             <div class="contentbox">Humidity: <span id="humid">15%</span></p>
             <div class="contentbox">Wind Speed: <span id="speed">12 mph</span></p>
@@ -71,27 +71,27 @@
               <div class="forecast">
                 <div class="flex-col">
                   <span class="Day">MON</span>
-                  <img src="../lesson9/images/sunny-SML.png" alt="sun">
+                  <img src="../lesson10/images/sunny-SML.png" alt="sun">
                   <span class="temp">75&deg;</span>
                 </div>
                 <div class="flex-col">
                   <span class="Day">TUE</span>
-                  <img src="../lesson9/images/sunny-SML.png" alt="sun">
+                  <img src="../lesson10/images/sunny-SML.png" alt="sun">
                   <span class="temp">72&deg;</span>
                 </div>
                 <div class="flex-col">
                   <span class="Day">WED</span>
-                  <img src="../lesson9/images/sunny-SML.png" alt="sun">
+                  <img src="../lesson10/images/sunny-SML.png" alt="sun">
                   <span class="temp">78&deg;</span>
                 </div>
                 <div class="flex-col">
                   <span class="Day">THU</span>
-                  <img src="../lesson9/images/sunny-SML.png" alt="sun">
+                  <img src="../lesson10/images/sunny-SML.png" alt="sun">
                   <span class="temp">74&deg;</span>
                 </div>
                 <div class="flex-col">
                   <span class="Day">FRI</span>
-                  <img src="../lesson9/images/sunny-SML.png" alt="sun">
+                  <img src="../lesson10/images/sunny-SML.png" alt="sun">
                   <span class="temp">71&deg;</span>
                 </div>
               </div>
@@ -101,7 +101,7 @@
               <br>
               <br>
               <p>
-                <img src="../lesson9/images/forked-bolt-SML.jpeg" alt="Weather Wonder">
+                <img src="../lesson10/images/forked-bolt-SML.jpeg" alt="Weather Wonder">
                 "Lorem ipsum dolor sit amet consectetur adipisicing
         elit. Hic, perspiciatis. Placeat veniam quo, dolore optio autem doloribus distinctio et dicta totam fugit
         perferendis sit numquam vel qui alias quas debitis repellendus accusantium provident ex. Autem deserunt animi
@@ -131,18 +131,18 @@
                   "email"
                 </p>
                 <a class="socialmedia" target="_blank" href="https://www.facebook.com">
-                <img class="icon" src="../lesson9/images/FBCrayon.png" alt="FB logo">
+                <img class="icon" src="../lesson10/images/FBCrayon.png" alt="FB logo">
                 </a>
                 <a class="socialmedia" target="_blank" href="https://www.twitter.com">
-                  <img class="icon" src="../lesson9/images/TwitterCrayon.png" alt="Twitter logo">
+                  <img class="icon" src="../lesson10/images/TwitterCrayon.png" alt="Twitter logo">
                   </a>
                   <a class="socialmedia" target="_blank" href="https://www.youtube.com">
-                    <img class="icon" src="../lesson9/images/YTCrayon.png" alt="YouTube logo">
+                    <img class="icon" src="../lesson10/images/YTCrayon.png" alt="YouTube logo">
                     </a>
               </section>
            <p>
              <br>
-             <img src="../lesson9/images/Preston-SML.jpg" alt="Preston map">
+             <img src="../lesson10/images/Preston-SML.jpg" alt="Preston map">
            </p>
             </div> 
         </main>
@@ -172,8 +172,9 @@
                   </section>
                 </p>
             </footer> 
-         <script src="../lesson9/js/currentdate.js"></script>
-        <script src="../lesson9/js/hamburger.js"></script>
-        <script src="../lesson9/js/windchill.js"></script>
-        </body>
+         <script src="../lesson10/js/currentdate.js"></script>
+        <script src="../lesson10/js/hamburger.js"></script>
+        <script src="../lesson10/js/windchill.js"></script>
+        <script src="../lesson10/js/weatherapi.js"></script>
+      </body>
 </html>
