--- a/index.html
+++ b/index.html
@@ -43,5 +43,8 @@
     </p>
     </footer>
     </body>
-    <script src="../Tienut73.github.io/js/main.js"></script>
+    <script src="../Tienut73.github.io/WDDAssignments/lesson10/js/main.js"></script>
+    <script src="../Tienut73.github.io/WDDAssignments/lesson10/js/windchill.js"></script>
+    <script src="../Tienut73.github.io/WDDAssignments/lesson10/js/forecast.js"></script>
+
     </html>
