--- a/WDDAssignments/lesson10/preston-10.html
+++ b/WDDAssignments/lesson10/preston-10.html
@@ -25,7 +25,7 @@
         </section>
       </header>
         <nav>
-          <ul class="navigation">
+          <ul id="primeNav" class="navigation">
           <li><a href="#" onclick="toggleMenu()">&#9776;</a>
              </li>
                 <li>
