--- a/WDDAssignments/lesson-11/preston-10.html
+++ b/WDDAssignments/lesson-11/preston-10.html
@@ -26,7 +26,7 @@
       </header>
         <nav>
           <ul id="primeNav" class="navigation">
-          <li><a href="#" onclick="toggleMenu()">&#9776;</a>
+          <li><a id="hamButton" href="#" onclick="toggleMenu()">&#9776;</a>
              </li>
                 <li>
                   <a href="../lesson10/index.html">Home</a>
