--- a/WDDAssignments/lesson-11/index.html
+++ b/WDDAssignments/lesson-11/index.html
@@ -7,21 +7,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5"> 
 <meta name="author" content="Logan Pierce">
 <meta name="description" content="Weather Wizard gives forecasts for Fish Haven, Preston, and Soda Springs.">
-<link rel="stylesheet" type="text/css" href="../lesson9/css/normalize.css">
-<link rel="stylesheet" type="text/css" href="../lesson9/css/small.css">
-<link rel="stylesheet" type="text/css" href="../lesson9/css/medium.css">
-<link rel="stylesheet" type="text/css" href="../lesson9/css/large.css">
-
+<link rel="stylesheet" type="text/css" href="../lesson-11/css/normalize.css">
+<link rel="stylesheet" type="text/css" href="../lesson-11/css/small.css">
+<link rel="stylesheet" type="text/css" href="../lesson-11/css/medium.css">
+<link rel="stylesheet" type="text/css" href="../lesson-11/css/large.css">
 </head>
-<body>
+
+      <body>
         <div id="plannedEvent">Preston Pancakes in the Park!<br> 
           City Park, 9:00 A.M. Saturday
         </div>
+
           <header class="clearfix">
-              <img src="../lesson9/images/stormCloud.png" alt="logo">
+              <img src="../lesson-11/images/stormCloud.png" alt="logo">
               <section class="headings">
           <h1>Weather Wizard</h1>
-          // m
           <div class="slogan">We're here, rain or shine!</div>
           </section>
         </header>
@@ -29,29 +29,30 @@
         <nav class="clearfix">
             <button onclick="toggleMenu()">&#9776; Menu</button>
             <ul id="primeNav" class="hide">
-            <li class="active"><a href="index.html">Home</a></li>
+            <li class="active"><a href="../lesson-11/index.html">Home</a></li>
                   <li>
-                    <a href="../lesson9/preston-9.html">Preston</a></li>
+                    <a href="../lesson-11/preston.html">Preston</a></li>
                   <li>
-                      <a href="../lesson9/index.html">Soda Springs</a></li>
+                      <a href="../lesson-11/sodaSprings.html">Soda Springs</a></li>
                     <li>
-                      <a href="../lesson9/index.html">Fish Haven</a></li>
+                      <a href="../lesson-11/fishHaven.html">Fish Haven</a></li>
                     <li>
-                      <a href="../lesson9/stormcenter.html">Storm Center</a></li>
+                      <a href="../lesson-11/stormcenter.html">Storm Center</a></li>
                     <li>
-                      <a href="../lesson9/gallery-9.html">Gallery</a></li>
+                      <a href="../lesson-11/gallery.html">Gallery</a></li>
               </ul>
           </nav>
     
   <main>
-      <div class="news">          
+      <div class="news"> 
+        <h2>Weather Article</h2>  
+        <img src="../lesson-11/images/articlePhoto.jpg" alt="Article Image">       
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Susc
         ipit temporibus sunt iste magnam, nobis, obcaecati quisquam, 
         voluptate fugiat impedit expedita saepe dignissimos provident? 
         Praesentium ipsam suscipit aspernatur aliquam dolor numquam.
     </p>
-    <img src="*" alt="Article Image">
 </div>
 <div class="townname">
 
@@ -61,7 +62,7 @@
     <p>Wire Frames: <a href="https://wireframe.cc/pro/pp/5d36e4dc5352366">Small</a> | <a href="https://wireframe.cc/pro/pp/d0ccd718c352364">Medium</a> | <a href="https://wireframe.cc/pro/pp/cd03f3235352362">Large</a></p>
     <p> &#169; Weather Wizard | <span id="currentdate"></span></p>
 </footer>
-<script src="js/currentUpdate.js"></script>
+<script src="../lesson-11/js/currentUpdate.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
         <script>
           WebFont.load({google: {families: ["Verdana", "Roboto"]} });
