--- a/WDDAssignments/lesson-11/fishHaven.html
+++ b/WDDAssignments/lesson-11/fishHaven.html
@@ -6,18 +6,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <meta name="description" content="Weather Wizard gives weekly forecasts.">
         <link rel="shortcut icon" href="images/favicon.ico">
-        <link rel="stylesheet" type="text/css" href="../lesson10/css/normalize.css">
-        <link rel="stylesheet" type="text/css" href="../lesson10/css/small.css">
-        <link rel="stylesheet" type="text/css" href="../lesson10/css/medium.css">
-        <link rel="stylesheet" type="text/css" href="../lesson10/css/large.css">
+        <link rel="stylesheet" type="text/css" href="../lesson-11/css/normalize.css">
+        <link rel="stylesheet" type="text/css" href="../lesson-11/css/small.css">
+        <link rel="stylesheet" type="text/css" href="../lesson-11/css/medium.css">
+        <link rel="stylesheet" type="text/css" href="../lesson-11/css/large.css">
     </head>
+
     <body class="vsc initalized">
       <div id="plannedEvent">Preston Pancakes in the Park!<br>
         City Park, 9:00 A.M. Saturday
       </div>
-        <header class="clearfix"><a href="lesson10/preston-10.html">
+
+        <header class="clearfix"><a href="lesson-11/preston.html">
             <figure class="logo">
-            <img src="../lesson10/images/stormCloud.png" alt="logo">
+            <img src="../lesson-11/images/stormCloud.png" alt="logo">
             </figure></a>
             <section class="heading">
         <h1>Weather Wizard</h1>
@@ -26,36 +28,38 @@
       </header>
         <nav>
           <ul id="primeNav" class="navigation">
-          <li><a id="hamButton" href="#" onclick="toggleMenu()">&#9776;</a>
+          <li><button id="hamButton" href="#" onclick="toggleMenu()">&#9776;</button>
              </li>
                 <li>
-                  <a href="../lesson10/index.html">Home</a>
+                  <a href="../lesson-11/index.html">Home</a>
                 </li>
                 <li>
-                  <a href="../lesson10/preston-10.html" class="active">Preston</a>
+                  <a href="../lesson-11/preston.html" class="active">Preston</a>
                 </li>
                 <li>
-                    <a href="../lesson10/preston-10.html">Soda Springs</a>
+                    <a href="../lesson-11/sodaSprings.html">Soda Springs</a>
                   </li>
                   <li>
-                    <a href="../lesson10/preston-10.html">Fish Haven</a>
+                    <a href="../lesson-11/fishHaven.html">Fish Haven</a>
                   </li>
                   <li>
-                    <a href="../lesson10/stormcenter.html">Storm Center</a>
+                    <a href="../lesson-11/stormcenter.html">Storm Center</a>
                   </li>
                   <li>
-                    <a href="../lesson10/gallery-9.html">Gallery</a>
+                    <a href="../lesson-11/gallery.html">Gallery</a>
                   </li>
             </ul>
         </nav>
+        
         <main>
             <h2>Preston Idaho</h2>
             <section class="imgcontainer">
               <picture>
-                <source srcset="../lesson10/images/franklinSML.jpg" media="(max-width: 550px)">
-                <source srcset="../lesson10/images/franklinMED.jpg" media="(max-width: 950px)">
-                <img src="../lesson10/images/franklinLRG.jpeg" alt="franklin Image">
+                <source srcset="../lesson-11/images/franklinSML.jpg" media="(max-width: 550px)">
+                <source srcset="../lesson-11/images/franklinMED.jpg" media="(max-width: 950px)">
+                <img src="../lesson-11/images/franklinLRG.jpeg" alt="franklin Image">
               </picture>
+
             <div class="weatherSum">
             <div id="boxtitle">Weather Summary</div>
             <div class="contentbox">Currently: <span id="weather">Sunny</span></p>
@@ -95,6 +99,11 @@
                 </div>
               </div>
             </section>
+
+                <div class="towns">
+
+                </div>
+
             <div class="article">
               <h2>Weather Wonders</h2>
               <br>
@@ -115,19 +124,23 @@
         molestias dicta. Voluptatem fuga architecto distinctio ab inventore quam!"
               </p>
             </div>
+
             <div class="map">
+              <img src="../lesson10/images/Preston-SML.jpg" alt="Preston map">
+
               <section class="contact">
+                <h5>Contact Information</h5>
                 <p>
                   "My Weather Report Today"
                   <br>
-                  "Address"
+                  <span> 30 N 1st E</span>
                   <br>
-                  "Address"
+                  "Preston, ID 83263"
                 </p>
                 <p>
-                  "Phone Number"
+                  "(208)-555-5555"
                   <br>
-                  "email"
+                  "contact@weatherwizard.com"
                 </p>
                 <a class="socialmedia" target="_blank" href="https://www.facebook.com">
                 <img class="icon" src="../lesson10/images/FBCrayon.png" alt="FB logo">
@@ -141,7 +154,6 @@
               </section>
            <p>
              <br>
-             <img src="../lesson10/images/Preston-SML.jpg" alt="Preston map">
            </p>
             </div> 
         </main>
@@ -153,7 +165,7 @@
                   <script>
         var today = new Date();
         var dd = today.getDate();
-        var mm = today.getMonth() + 1; //January is 0!
+        var mm = today.getMonth() + 1; 
         var yyyy = today.getFullYear();
         
         if (dd < 10) {
