--- a/WDDAssignments/lesson-11/fishHaven.html
+++ b/WDDAssignments/lesson-11/fishHaven.html
@@ -34,13 +34,13 @@
                   <a href="../lesson-11/index.html">Home</a>
                 </li>
                 <li>
-                  <a href="../lesson-11/preston.html" class="active">Preston</a>
+                  <a href="../lesson-11/preston.html">Preston</a>
                 </li>
                 <li>
                     <a href="../lesson-11/sodaSprings.html">Soda Springs</a>
                   </li>
                   <li>
-                    <a href="../lesson-11/fishHaven.html">Fish Haven</a>
+                    <a href="../lesson-11/fishHaven.html" class="active">Fish Haven</a>
                   </li>
                   <li>
                     <a href="../lesson-11/stormcenter.html">Storm Center</a>
@@ -100,10 +100,6 @@
               </div>
             </section>
 
-                <div class="towns">
-
-                </div>
-
             <div class="article">
               <h2>Weather Wonders</h2>
               <br>
@@ -131,7 +127,7 @@
               <section class="contact">
                 <h5>Contact Information</h5>
                 <p>
-                  "My Weather Report Today"
+                  "Weather Wizard"
                   <br>
                   <span> 30 N 1st E</span>
                   <br>
