--- a/WDDAssignments/lesson-11/sodaSprings.html
+++ b/WDDAssignments/lesson-11/sodaSprings.html
@@ -34,10 +34,10 @@
                   <a href="../lesson-11/index.html">Home</a>
                 </li>
                 <li>
-                  <a href="../lesson-11/preston.html" class="active">Preston</a>
+                  <a href="../lesson-11/preston.html">Preston</a>
                 </li>
                 <li>
-                    <a href="../lesson-11/sodaSprings.html">Soda Springs</a>
+                    <a href="../lesson-11/sodaSprings.html" class="active">Soda Springs</a>
                   </li>
                   <li>
                     <a href="../lesson-11/fishHaven.html">Fish Haven</a>
@@ -99,10 +99,6 @@
                 </div>
               </div>
             </section>
-
-                <div class="towns">
-
-                </div>
 
             <div class="article">
               <h2>Weather Wonders</h2>
