--- a/WDDAssignments/lesson-11/fishHaven.html
+++ b/WDDAssignments/lesson-11/fishHaven.html
@@ -17,9 +17,9 @@
         City Park, 9:00 A.M. Saturday
       </div>
 
-        <header class="clearfix"><a href="lesson-11/preston.html">
+        <header class="clearfix"><a href="index.html">
             <figure class="logo">
-            <img src="../lesson-11/images/stormCloud.png" alt="logo">
+            <img src="../lesson-11/images/stormCloud.jpg" alt="logo">
             </figure></a>
             <section class="heading">
         <h1>Weather Wizard</h1>
@@ -52,7 +52,7 @@
         </nav>
         
         <main>
-            <h2>Preston Idaho</h2>
+            <h2>Fish Haven Idaho</h2>
             <section class="imgcontainer">
               <picture>
                 <source srcset="../lesson-11/images/franklinSML.jpg" media="(max-width: 550px)">
@@ -99,6 +99,9 @@
                 </div>
               </div>
             </section>
+
+            <div class="towns">
+            </div>
 
             <div class="article">
               <h2>Weather Wonders</h2>
@@ -179,10 +182,12 @@
                   </section>
                 </p>
             </footer> 
-         <script src="../lesson10/js/currentdate.js"></script>
-        <script src="../lesson10/js/hamburger.js"></script>
-        <script src="../lesson10/js/windchill.js"></script>
-        <script src="../lesson10/js/weatherapi.js"></script>
-        <script src="../lesson10/js/forecast.js"></script>
+         <script src="../lesson-11/js/currentdate.js"></script>
+        <script src="../lesson-11/js/hamburger.js"></script>
+        <script src="../lesson-11/js/windchill.js"></script>
+        <script src="../lesson-11/js/weatherapi.js"></script>
+        <script src="../lesson-11/js/forecast.js"></script>
+        <script src="../lesson-11/js/fishHaven.js"></script>
+
       </body>
 </html>
