--- a/WDDAssignments/lesson-11/sodaSprings.html
+++ b/WDDAssignments/lesson-11/sodaSprings.html
@@ -17,7 +17,7 @@
         City Park, 9:00 A.M. Saturday
       </div>
 
-        <header class="clearfix"><a href="lesson-11/preston.html">
+        <header class="clearfix"><a href="index.html">
             <figure class="logo">
             <img src="../lesson-11/images/stormCloud.png" alt="logo">
             </figure></a>
@@ -100,6 +100,9 @@
               </div>
             </section>
 
+            <div class="towns">
+            </div>
+
             <div class="article">
               <h2>Weather Wonders</h2>
               <br>
@@ -127,7 +130,7 @@
               <section class="contact">
                 <h5>Contact Information</h5>
                 <p>
-                  "My Weather Report Today"
+                  "Weather Wizard"
                   <br>
                   <span> 30 N 1st E</span>
                   <br>
@@ -179,10 +182,11 @@
                   </section>
                 </p>
             </footer> 
-         <script src="../lesson10/js/currentdate.js"></script>
-        <script src="../lesson10/js/hamburger.js"></script>
-        <script src="../lesson10/js/windchill.js"></script>
-        <script src="../lesson10/js/weatherapi.js"></script>
-        <script src="../lesson10/js/forecast.js"></script>
+         <script src="../lesson-11/js/currentdate.js"></script>
+        <script src="../lesson-11/js/hamburger.js"></script>
+        <script src="../lesson-11/js/windchill.js"></script>
+        <script src="../lesson-11/js/weatherapi.js"></script>
+        <script src="../lesson-11/js/forecast.js"></script>
+        <script src="../lesson-11/js/sodaSprings.js"></script>
       </body>
 </html>
