--- a/WDDAssignments/lesson-11/index.html
+++ b/WDDAssignments/lesson-11/index.html
@@ -26,22 +26,30 @@
           </section>
         </header>
 
-        <nav class="clearfix">
-            <button onclick="toggleMenu()">&#9776; Menu</button>
-            <ul id="primeNav" class="hide">
-            <li class="active"><a href="../lesson-11/index.html">Home</a></li>
+        <nav>
+          <ul id="primeNav" class="navigation">
+          <li><button id="hamButton" href="#" onclick="toggleMenu()">&#9776;</button>
+             </li>
+                <li>
+                  <a href="../lesson-11/index.html"  class="active">Home</a>
+                </li>
+                <li>
+                  <a href="../lesson-11/preston.html">Preston</a>
+                </li>
+                <li>
+                    <a href="../lesson-11/sodaSprings.html">Soda Springs</a>
+                  </li>
                   <li>
-                    <a href="../lesson-11/preston.html">Preston</a></li>
+                    <a href="../lesson-11/fishHaven.html">Fish Haven</a>
+                  </li>
                   <li>
-                      <a href="../lesson-11/sodaSprings.html">Soda Springs</a></li>
-                    <li>
-                      <a href="../lesson-11/fishHaven.html">Fish Haven</a></li>
-                    <li>
-                      <a href="../lesson-11/stormcenter.html">Storm Center</a></li>
-                    <li>
-                      <a href="../lesson-11/gallery.html">Gallery</a></li>
-              </ul>
-          </nav>
+                    <a href="../lesson-11/stormcenter.html">Storm Center</a>
+                  </li>
+                  <li>
+                    <a href="../lesson-11/gallery.html">Gallery</a>
+                  </li>
+            </ul>
+        </nav>
     
   <main>
       <div class="news"> 
