--- a/WDDAssignments/lesson-11/stormcenter.html
+++ b/WDDAssignments/lesson-11/stormcenter.html
@@ -20,18 +20,32 @@
         <h2>Severe Weather Submission Forms</h2>
     </header>
     
+    <nav>
+      <ul id="primeNav" class="navigation">
+      <li><button id="hamButton" href="#" onclick="toggleMenu()">&#9776;</button>
+         </li>
+            <li>
+              <a href="../lesson-11/index.html">Home</a>
+            </li>
+            <li>
+              <a href="../lesson-11/preston.html">Preston</a>
+            </li>
+            <li>
+                <a href="../lesson-11/sodaSprings.html">Soda Springs</a>
+              </li>
+              <li>
+                <a href="../lesson-11/fishHaven.html">Fish Haven</a>
+              </li>
+              <li>
+                <a href="../lesson-11/stormcenter.html" class="active">Storm Center</a>
+              </li>
+              <li>
+                <a href="../lesson-11/gallery.html">Gallery</a>
+              </li>
+        </ul>
+    </nav>
+
     
-<nav class="clearfix">
-      <button onclick="toggleMenu()">&#9776;</button>
-    <ul class="hide" id="primeNav">
-        <li class="active"><a href="index.html">Home</a></li>
-    	<li><a href="#">Preston</a></li>
-    	<li><a href="#">Soda Springs</a></li>
-    	<li><a href="#">Fish Haven</a></li>
-    	<li><a href="stormcenter.html">Storm Center</a></li>
-    	<li><a href="#">Gallery</a></li>
-            </ul>		
-  </nav>
 <main>
     <h1>Severe Weather Report Center</h1>
        <div class="container">
