--- a/WDDAssignments/lesson-11/fishHaven.html
+++ b/WDDAssignments/lesson-11/fishHaven.html
@@ -19,7 +19,7 @@
 
         <header class="clearfix"><a href="index.html">
             <figure class="logo">
-            <img src="../lesson-11/images/stormCloud.jpg" alt="logo">
+            <img src="../lesson-11/images/stormCloud.png" alt="logo">
             </figure></a>
             <section class="heading">
         <h1>Weather Wizard</h1>
@@ -55,9 +55,9 @@
             <h2>Fish Haven Idaho</h2>
             <section class="imgcontainer">
               <picture>
-                <source srcset="../lesson-11/images/franklinSML.jpg" media="(max-width: 550px)">
-                <source srcset="../lesson-11/images/franklinMED.jpg" media="(max-width: 950px)">
-                <img src="../lesson-11/images/franklinLRG.jpeg" alt="franklin Image">
+                <source srcset="../lesson-11/images/fishhaven.jpg" media="(max-width: 550px)">
+                <source srcset="../lesson-11/images/fishhaven.jpg" media="(max-width: 950px)">
+                <img src="../lesson-11/images/fishhaven.jpg" alt="Fish Haven Image">
               </picture>
 
             <div class="weatherSum">
