--- a/WDDAssignments/lesson-11/preston.html
+++ b/WDDAssignments/lesson-11/preston.html
@@ -55,9 +55,9 @@
             <h2>Preston Idaho</h2>
             <section class="imgcontainer">
               <picture>
-                <source srcset="../lesson-11/images/franklinSML.jpg" media="(max-width: 550px)">
-                <source srcset="../lesson-11/images/franklinMED.jpg" media="(max-width: 950px)">
-                <img src="../lesson-11/images/franklinLRG.jpeg" alt="franklin Image">
+                <source srcset="../lesson-11/images/preston.jpg" media="(max-width: 550px)">
+                <source srcset="../lesson-11/images/preston.jpg" media="(max-width: 950px)">
+                <img src="../lesson-11/images/preston.jpg" alt="Preston Image">
               </picture>
 
             <div class="weatherSum">
