--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <li><p>Lesson 8: <a href="https://tienut73.github.io/WDDAssignments/lesson8/tablebuild.html">Table Build</a> | <a href="https://tienut73.github.io/WDDAssignments/lesson8/stormcenter.html">Storm Center</a></p></li>
     <li><p>Lesson 9: <a href="https://tienut73.github.io/WDDAssignments/lesson9/prophets.html">Prophets Assignment</a> | <a href="https://tienut73.github.io/WDDAssignments/lesson9/index.html">Week 09 Assignment</a></p></li>
     <li><p>Lesson 10: <a href="https://tienut73.github.io/WDDAssignments/lesson10/api-test.html">Weather API</a> | <a href="https://tienut73.github.io/WDDAssignments/lesson10/preston-10.html">Preston Weather Assignment</a></p></li>
+    <li><p>Lesson 11: <a href="https://tienut73.github.io/WDDAssignments/lesson-11/index.html">Weather Project</a>
 
     </ul>
 </nav>
