--- a/WDDAssignments/Final_Project/Reservations.html
+++ b/WDDAssignments/Final_Project/Reservations.html
@@ -157,6 +157,7 @@
                 <label class="top">State
                 </label>
                       <select id="state" name="state"><option value="---">---</option>
+                        <option value="NA">N/A</option>
                         <option value="Alabama">Alabama</option>
                         <option value="Alaska">Alaska</option>
                         <option value="Arizona">Arizona</option>
@@ -213,10 +214,10 @@
                         <option value="Wyoming">Wyoming</option></select>
                         <br>
                         <label class="top">Cruise Line <input type="text" name="cruise" pattern="[A-Za-z]{2+}"></label>
-                      <label class="top">Rental Date<input type="date" name="date"></label>
+                      <label class="top">Rental Date<input type="date" name="date" required></label>
                         <label class="top">Rental Type</label>
-                            <input type="text" name="stormtype" list="stormlist" placeholder="  click to select">
-                            <datalist id="stormlist">
+                            <input type="text" name="scootertype" list="scooterlist" placeholder="  click to select">
+                            <datalist id="scooterlist">
                                 <option value="Honda Metro Scooter">
                                 <option value="Honda Dio Scooter">
                                 <option value="Honda PCX150 Scooter">
@@ -289,7 +290,7 @@ Please feel free to provide us with any special accommodations which you might r
       <div id="content-footer">
         <div id="footer-left">
   <div id="ql-banner">
-    <img src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/quickLinksMini.jpg" alt="Heart" class="ql-image"><span class="ql-banner-text">Quick Links</span>
+    <img src="../Final_Project/IMG/quickLinksMini.jpg" alt="Heart" class="ql-image"><span class="ql-banner-text">Quick Links</span>
   </div>
 </div>
 <div id="footer-right">
@@ -313,7 +314,7 @@ Please feel free to provide us with any special accommodations which you might r
 
     
   <div class="content">
-    <p><span style="font-size: small;">&#169; 1979-2018, The Mountain Spoke, 3950 Valley Commons Dr, Bozeman, MT 59715, 555-776-5364 (555-SPO-KEN4)</span></p>
+    <p><span style="font-size: small;">&#169; 1979-2020, Scoots, Cozumel, MEX, 555-5SC-OOTS</span></p>
 <p style="font-family: 'Georgia-Regular', sans-serif; font-size: 13px; font-style: normal; line-height: 16px; text-transform: uppercase; padding-top: 0px; margin-top: 0px;"><script>
 var today = new Date();
 var dd = today.getDate();
