--- a/WDDAssignments/Final_Project/Rentals.html
+++ b/WDDAssignments/Final_Project/Rentals.html
@@ -19,8 +19,8 @@
   <meta charset="utf-8">
 <link href="https://fonts.googleapis.com/css?family=Georgia" rel="stylesheet">
 <meta charset="utf-8">
-<link rel='shortcut icon' href='https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/bikeLogoMini.jpg' alt="Logo" type='image/logo'>
-<link rel='icon' href='https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/bikeLogoMini.jpg' alt="Logo" type='image/logo'>
+<link rel='shortcut icon' href="../Final_Project/IMG/bikeLogoMini.jpg" alt="Logo" type='image/logo'>
+<link rel='icon' href="../Final_Project/IMG/bikeLogoMini.jpg" alt="Logo" type='image/logo'>
 <meta property="site_name" content="Scoots" />
 <meta property="title" content="Cozumel's Premiere Scooter Rentals." />
 <meta itemprop="name" content="Cozumel's Premiere Scooter Rentals." />
@@ -34,7 +34,7 @@
 </head>
 <body class="html not-front not-logged-in no-sidebars page-node page-node- page-node-44 node-type-panel fluid-width" >
   <div id="skip-link">
-    <a href="Index.html" class="element-invisible element-focusable">Home Page</a>
+    <a href="Home.html" class="element-invisible element-focusable">Home Page</a>
   </div>
     <div id="page-wrapper">
   <div id="main-content-wrapper">
@@ -52,15 +52,16 @@
   <div class="region region-sidebar-interior">   
     <div id="block-menu-menu-interior-menu" class="block block-menu clearfix " >
         <a href="/">
-    <img src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/bikeLogo.jpg" alt="Logo" class="sidebar-logo">
+    <img src="../Final_Project/IMG/bikeLogo.jpg" alt="Logo" class="sidebar-logo">
   </a>
   <div class="content">
       <nav class="clearfix">
-    <ul class="menu"><li class="first collapsed"><a href="AdventureTours.html">Adventure Tours</a></li>
-<li class="Events"><a href="Event.html" class="Events">Events</a><ul class="menu"><li class="Sales"><a href="Sales.html" title="Store">Store</a></li>
-<li class="Service"><a href="Service.html">Service / Repair</a></li>
+    <ul class="menu"><li class="first collapsed"><a href="Tours.html">Tours</a></li>
+<li class="Events"><a href="Reservations.html" class="Reservations">Reservations</a>
+  <ul class="menu"><li class="Sales"><a href="Sales.html" title="Store">Store</a></li>
+<li class="Service"><a href="Rentals.html">Rentals</a></li>
 <li class="Contact"><a href="Contact.html" title="">Contact</a></li>
-</ul>    <img src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/quickLinksMini.jpg" alt="Heart" class="ql-image">
+</ul>    <img src="../Final_Project/IMG/quickLinksMini.jpg" alt="Heart" class="ql-image">
   </div>
 </div><div id="block-block-1" class="block block-block clearfix " >
         <span class="connect-title"></span>
@@ -280,7 +281,7 @@
       <div id="content-footer">
         <div id="footer-left">
   <div id="ql-banner">
-    <img src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/quickLinksMini.jpg" alt="Heart" class="ql-image"><span class="ql-banner-text">Quick Links</span>
+    <img src="../Final_Project/IMG/quickLinksMini.jpg" alt="Heart" class="ql-image"><span class="ql-banner-text">Quick Links</span>
   </div>
 </div>
 <div id="footer-right">
@@ -289,10 +290,10 @@
       
   <div class="content">
     <ul class="menu"><li class=""><span title="" class="active-trail nolink">Programs</span><ul class="menu"><li class=""><a href="Event.html" title="" class="">Events</a></li>
-        <li class="leaf"><a href="AdventureTours.html" title="">Adventure Tours</a></li>
+        <li class="leaf"><a href="Tours.html" title="">Tours</a></li>
 </ul></li>
 <li class="expanded"><span title="" class="nolink">Products</span><ul class="menu"><li class="first leaf"><a href="" title="Sales.html">Store</a></li>
-<li class="leaf"><a href="Service.html" title="">Service/Repair</a></li>
+<li class="leaf"><a href="Rentals.html" title="">Rentals</a></li>
 </ul></li>
 <li class="last expanded"><span title="" class="nolink">Personnel</span><ul class="menu"><li class="first leaf"><a href="Contact.html" title="">Contact</a></li>
 </ul></li>
