--- a/WDDAssignments/Final_Project/Thanks.html
+++ b/WDDAssignments/Final_Project/Thanks.html
@@ -4,13 +4,13 @@
 <head>
 <link href="https://fonts.googleapis.com/css?family=Georgia" rel="stylesheet">
 <meta charset="utf-8">
-<link rel='shortcut icon' href='https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/bikeLogoMini.jpg' alt="Logo" type='image/logo'>
-<link rel='icon' href='https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/bikeLogoMini.jpg' alt="Logo" type='image/logo'>
-<meta property="site_name" content="The Mountain Spoke" />
-<meta property="title" content="Bozeman's Best Bike Business." />
-<meta itemprop="name" content="Bozeman's Best Bike Business." />
+<link rel='shortcut icon' href='../Final_Project/IMG/bikeLogoMini.jpg' alt="Logo" type='image/logo'>
+<link rel='icon' href='../Final_Project/IMG/bikeLogoMini.jpg' alt="Logo" type='image/logo'>
+<meta property="site_name" content="Scoots" />
+<meta property="title" content="Cozumel's Premiere Scooter Rentals." />
+<meta itemprop="name" content="Cozumel's Premiere Scooter Rentals." />
   <meta name="viewport" content="initial-scale=1, width=device-width">
-  <title>The Mountain Spoke | Bozeman's Best Bike Business</title>
+  <title>Scoots | Cozumel's Premiere Scooter Rentals.</title>
 <link rel="stylesheet" type="text/css" href="CSS/small.css">
 <link rel="stylesheet" type="text/css" href="CSS/medium.css">
 <link rel="stylesheet" type="text/css" href="CSS/large.css">
@@ -19,7 +19,7 @@
 </head>
 <body class="html not-front not-logged-in no-sidebars page-node page-node- page-node-44 node-type-panel fluid-width" >
   <div id="skip-link">
-    <a href="Index.html" class="element-invisible element-focusable">Home Page</a>
+    <a href="Home.html" class="element-invisible element-focusable">Home Page</a>
   </div>
     <div id="page-wrapper">
   <div id="main-content-wrapper">
@@ -41,11 +41,12 @@
   </a>
   <div class="content">
       <nav class="clearfix">
-    <ul class="menu"><li class="first collapsed"><a href="AdventureTours.html">Adventure Tours</a></li>
-<li class="expanded active-trail"><a href="Event.html" class="active-trail active">Events</a><ul class="menu"><li class="first leaf"><a href="Sales.html" title="Search through our Bicycle Friendly America Awards">Store</a></li>
-<li class="collapsed"><a href="Service.html">Service / Repair</a></li>
+    <ul class="menu"><li class="first collapsed"><a href="Tours.html">Tours</a></li>
+<li class="expanded active-trail"><a href="Reservations.html" class="active-trail active">Reservations</a>
+  <ul class="menu"><li class="first leaf"><a href="Sales.html" title="Search through our Bicycle Friendly America Awards">Store</a></li>
+<li class="collapsed"><a href="Rentals.html">Rentals</a></li>
 <li class="collapsed"><a href="Contact.html" title="">Contact</a></li>
-</ul>    <img src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/quickLinksMini.jpg" alt="Heart" class="ql-image"><a id="scroll-quicklinks" class="scrlBotm">Quick Links</a>
+</ul>    <img src="../Final_Project/IMG/quickLinksMini.jpg" alt="Heart" class="ql-image"><a id="scroll-quicklinks" class="scrlBotm">Quick Links</a>
   </div>
 </div>
   </div>
@@ -79,7 +80,7 @@
       <div class="node-title-container">
         <div class="node-title">
           <h1>
-            The Mountain Spoke         </h1>
+            Scoots         </h1>
         </div>
       </div>
       <div class="node-heading-image-container">
@@ -141,7 +142,7 @@
       <div id="content-footer">
         <div id="footer-left">
   <div id="ql-banner">
-    <img src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/quickLinksMini.jpg" alt="Heart" class="ql-image"><span class="ql-banner-text">Quick Links</span>
+    <img src="../Final_Project/IMG/quickLinksMini.jpg" alt="Heart" class="ql-image"><span class="ql-banner-text">Quick Links</span>
   </div>
 </div>
 <div id="footer-right">
@@ -150,10 +151,10 @@
       
   <div class="content">
     <ul class="menu"><li class=""><span title="" class="active-trail nolink">Programs</span><ul class="menu"><li class=""><a href="Event.html" title="" class="">Events</a></li>
-        <li class="leaf"><a href="AdventureTours.html" title="">Adventure Tours</a></li>
+        <li class="leaf"><a href="Tours.html" title="">Tours</a></li>
 </ul></li>
 <li class="expanded"><span title="" class="nolink">Products</span><ul class="menu"><li class="first leaf"><a href="Sales.html" title="">Store</a></li>
-<li class="leaf"><a href="Service.html" title="">Service/Repair</a></li>
+<li class="leaf"><a href="Rentals.html" title="">Rentals</a></li>
 </ul></li>
 <li class="last expanded"><span title="" class="nolink">Personnel</span><ul class="menu"><li class="first leaf"><a href="Contact.html" title="">Contact</a></li>
 </ul></li>
@@ -165,7 +166,7 @@
 
     
   <div class="content">
-    <p><span style="font-size: small;">&#169; 1979-2018, The Mountain Spoke, 3950 Valley Commons Dr, Bozeman, MT 59715, 555-776-5364 (555-SPO-KEN4)</span></p>
+    <p><span style="font-size: small;">&#169; 1979-2020, Scoots, Cozumel, MEX, 555-5SC-OOTS</span></p>
 <p style="font-family: 'Georgia-Regular', sans-serif; font-size: 13px; font-style: normal; line-height: 16px; text-transform: uppercase; padding-top: 0px; margin-top: 0px;"><script>
 var today = new Date();
 var dd = today.getDate();
