--- a/WDDAssignments/Final_Project/Home.html
+++ b/WDDAssignments/Final_Project/Home.html
@@ -17,6 +17,10 @@
 <link rel="stylesheet" type="text/css" href="CSS/normalize.css">
 
 </head>
+<body class="vsc initalized">
+  <div id="call2Action">Book your rental today!<br>
+    Check out our <a href="Reservations.html" class="Reservations">reservations page.</a>
+  </div>
 <body class="html not-front not-logged-in no-sidebars page-node page-node- page-node-44 node-type-panel fluid-width" >
   <div id="skip-link">
     <a href="Home.html" class="element-invisible element-focusable">Home Page</a>
@@ -162,11 +166,11 @@ Welcome to Scoots! Your one stop scooter rental shop, located in beautiful Cozum
   
   <div class="pane-content">
    <main>
-    <h4>Some of the features included on our new site:</h4>
-<ul><li>The Tours page details daily guided scooter adventures with information about the length, required skill level, cost and location of the tours.</li>
-<li>The Event page highlights our annual "Cycle the Continental Divide" event with information about the dates, route, costs and basic requirements. Anyone interested in participating is encouraged to fill out the registration form. (Please include your full name, email, phone, date of birth, home state or country, and any special accommodations/comments.)</li>
-<li>Our Sales page offers great deals on new and used bikes available for purchase in store.</li>
-<li>Our Rentals page provides information regarding availble options for tune ups and repairs.</li>
+    <h4>Summary Rental Information:</h4>
+<ul><li>The Tours page details daily guided scooter adventures with information about the length, required skill level, cost, and location of the tours.</li>
+<li>The Reservations page highlights the various vehicles available for rent. From one person scooters to five person Jeeps! All interested parties are encouraged to fill out the registration form. (Please include your full name, email, phone, date of birth, home state or country, rental date, and any special accommodations/comments.)</li>
+<li>Our Store page offers detailed information on rental vehicles available for rent.</li>
+<li>Our Rentals page provides at-a-glance information regarding availble options. It allows for easy comparisons between models!</li>
 <li>The Contact page contains our location as well as phone and email information.</li>
 </ul>  </div>
 
