--- a/WDDAssignments/Final_Project/Reservations.html
+++ b/WDDAssignments/Final_Project/Reservations.html
@@ -135,14 +135,18 @@
 </div></div></div><div class="field field-name-field-link field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div>   
            
             <header>
- <h1>Cycle the Continental Divide</h1>
-                <h2>40th Annual Bike Race
-      April 27, 2019</h2>
+ <h1>Rental Agreement Information</h1>
+                <h2>General Use of Vehicle</h2>
     </header>
     
 <main>
-     <h4>This race will cover 40 miles. One mile for every year our doors have been open to the public. The race is set to begin at 7:30am and expected to end by 4pm. The route will take participants over ridges, past lakes and down steep hills along connected trails. The cost to enter is $35 per person. BYOB (Bring your own bike.) A helmet is also required. Water will be provided throughout the course, but participants are encouraged to bring their own supply of water. Also consider sunscreen. Avoid wearing loose-fiting clothing.</h4>
-    <h1>RegistraTION Form</h1>
+     <h4>- Rider is sole user.</h4>
+     <h4>- Rider is at least 18-years-old.</h4>
+     <h4>- Rider is a competent vehicle operator.</h4>
+     <h4>- Rider must obey all applicable laws while vehicle is in use.</h4>
+     <h4>- Rider is responsible for damages.</h4>
+    <br>
+    <h1>Registration Form</h1>
        <div class="container">
     <form method="get" action="thanks.html">
             <fieldset>
