--- a/WDDAssignments/Final_Project/Sales.html
+++ b/WDDAssignments/Final_Project/Sales.html
@@ -165,6 +165,10 @@
   
   <div class="pane-content">
       <p></p>
+
+      <script src="../Final_Project/JS/scooter.js"></script>
+
+
       <div class="content clearfix">
     <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even"><img typeof="foaf:Image" src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/pennyFarthing.jpg" alt="Pennyfarthing Bike" width="440" height="270" alt="" /></div></div></div><div class="field field-name-field-subject field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-field-heading field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p></p>
 </div></div></div><div class="field field-name-field-link field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div>   
